--- a/package.json
+++ b/package.json
@@ -4,14 +4,14 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
-    "build": "next build",
+    "build": "prisma migrate deploy && next build",
     "start": "next start",
     "lint": "next lint",
     "format": "prettier --write .",
     "test": "vitest run",
     "db:migrate": "prisma migrate dev --name init",
     "db:seed": "tsx db/seed.ts",
-    "postinstall": "prisma generate --schema db/schema.prisma"
+    "postinstall": "prisma generate"
   },
   "dependencies": {
     "@prisma/client": "5.18.0",
