--- a/package.json
+++ b/package.json
@@ -3,16 +3,16 @@
   "version": "1.0.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
-    "build": "prisma migrate deploy && next build",
-    "start": "next start",
-    "lint": "next lint",
-    "format": "prettier --write .",
-    "test": "vitest run",
-    "db:migrate": "prisma migrate dev --name init",
-    "db:seed": "tsx db/seed.ts",
-    "postinstall": "prisma generate"
-  },
+  "dev": "next dev",
+  "build": "next build",
+  "start": "prisma migrate deploy && tsx db/seed.ts && next start",
+  "lint": "next lint",
+  "format": "prettier --write .",
+  "test": "vitest run",
+  "db:migrate": "prisma migrate dev --name init",
+  "db:seed": "tsx db/seed.ts",
+  "postinstall": "prisma generate"
+},
   "dependencies": {
     "@prisma/client": "5.18.0",
     "bcryptjs": "2.4.3",
